# Veritas-SPARK

./: CHANGELOG.md  CLA.md  LICENSE  OLLAMA_COMPARISON_ANALYSIS.md  README.md  ROADMAP.md  SECURITY.md  TIER2_TESTING_PLAN.md
.agent/staging/: AUDIT_REPORT.md
core-runtime/: Cargo.toml  build.rs  cbindgen.toml
core-runtime/benches/: gpu_allocation.rs  ipc_throughput.rs  kv_cache_throughput.rs  llama_cpp_comparison.rs  multi_gpu_scaling.rs  scheduler_throughput.rs
core-runtime/fixtures/prompts/: large.json  medium.json  small.json
core-runtime/fuzz/: Cargo.toml  README.md
core-runtime/include/: veritas_spark.h
core-runtime/python/: pyproject.toml
core-runtime/python/veritas_spark/: __init__.py  _core.pyi
core-runtime/src/: lib.rs  main.rs
core-runtime/src/ab_testing/: mod.rs  variant.rs
core-runtime/src/ab_testing/metrics/: mod.rs  snapshot.rs  stats.rs
core-runtime/src/ab_testing/traffic/: bucket.rs  config.rs  mod.rs
core-runtime/src/cli/: deployment_debug.rs  health.rs  ipc_client.rs  mod.rs  status.rs
core-runtime/src/deployment/: canary.rs  metrics.rs  mod.rs  thresholds.rs
core-runtime/src/engine/: cuda.rs  flash_attn_gpu.rs  gpu.rs  inference.rs  metal.rs  mod.rs  multi_gpu.rs  multi_gpu_exec.rs  multi_gpu_exec_tests.rs  multi_gpu_partition.rs  multi_gpu_pipeline.rs  multi_gpu_tensor.rs
core-runtime/src/engine/gguf/: generator.rs  mod.rs
core-runtime/src/engine/moe/: combiner.rs  config.rs  executor.rs  mod.rs  router.rs
core-runtime/src/ffi/: auth.rs  error.rs  health.rs  inference.rs  mod.rs  models.rs  runtime.rs  streaming.rs  types.rs
core-runtime/src/ipc/: encoding.rs  handler.rs  mod.rs  protocol.rs  server.rs  stream_bridge.rs
core-runtime/src/k8s/: mod.rs  types.rs
core-runtime/src/memory/: limits.rs
core-runtime/src/models/: history.rs  lifecycle.rs  lifecycle_tests.rs  mod.rs  persistence.rs  pool.rs  pool_tests.rs  pool_types.rs  search.rs  smart_loader.rs  smart_loader_ops.rs  smart_loader_tests.rs  tier_synergy.rs  version.rs
core-runtime/src/python/: exceptions.rs  inference.rs  mod.rs  models.rs  runtime.rs  session.rs  streaming.rs
core-runtime/src/sandbox/: windows.rs
core-runtime/src/scheduler/: worker.rs
core-runtime/src/security/: encryption.rs
core-runtime/src/telemetry/: buckets.rs  metrics.rs  mod.rs  prometheus.rs  span_export.rs
core-runtime/tests/: bench_fixtures_test.rs  bluegreen_chaos_test.rs  canary_chaos_test.rs  chaos_resilience_test.rs  chaos_scheduler_shutdown_test.rs  chaos_shutdown_health_test.rs  chaos_stream_model_test.rs  cli_test.rs  encoding_roundtrip_test.rs  gpu_test.rs  gpu_v2_test.rs  protocol_version_test.rs  tier2_onnx_classification_test.rs
docs/: DEPENDENCY_ANALYSIS.md  HONEST_ASSESSMENT.md  Hearthlink Integration Notes.txt  INVARIANTS.md  IPC_PROTOCOL_SCHEMA.md  META_LEDGER.md  RECOMMENDED_MODELS.md  RUST_ENTERPRISE_ANALYSIS.md  USAGE_GUIDE.md  plan-tandem-experiments.md
docs/analysis/: COMPARATIVE_ANALYSIS.md
docs/architecture/: ADR-006-DEPLOYMENT-STRATEGIES.md  SCALABILITY_REMEDIATION_UPGRADE_PATH.md
docs/compliance/: SOC2_CONTROLS.md  SOC2_POLICIES.md
docs/operations/: CHAOS_RUNBOOK.md  DEPLOYMENT_TROUBLESHOOTING.md  INCIDENT_RESPONSE.md  QUICKSTART.md
docs/prompts/: VERITAS_SPARK.md
docs/review/: OPERATOR_EXPERIENCE.md  V0.6.0_OUTSIDER_REVIEW.md
docs/security/: INTERNAL_AUDIT_REPORT.md  SECURITY_ANALYSIS_REPORT.md
k8s/crds/: canary.yaml  environment.yaml
k8s/examples/: bluegreen-example.yaml  canary-example.yaml
k8s/helm/veritas-spark/: Chart.yaml  values.yaml
k8s/helm/veritas-spark/examples/: values-dev.yaml  values-multi-gpu.yaml  values-production.yaml  values-single-gpu.yaml
k8s/helm/veritas-spark/templates/: _helpers.tpl  bluegreen-service.yaml  canary-cr.yaml  canary-deployment.yaml  configmap.yaml  deployment.yaml  environment-cr.yaml  grafana-dashboard.yaml  prometheus-rules.yaml  rbac.yaml  serviceaccount.yaml
plans/: SECURITY_PERFORMANCE_REVIEW.md  SECURITY_REVIEW_REPORT.md  scalability-benchmark-gates.yaml  scalability-gate-metrics-critical-fail.json  scalability-gate-metrics-high-fail.json  scalability-gate-metrics-medium-fail.json  scalability-gate-metrics-missing-prereq.json  scalability-gate-sample-metrics.json  scalability-phase-sprint-plan.md  v0.6.0-execution-plan.md
scripts/: download-models.ps1  download-models.sh  e2e-proof.ps1  e2e-proof.sh
tools/: eval_gates.ps1
