[package]
name = "veritas-sdr"
version = "0.7.0"
edition = "2021"
description = "Veritas SPARK - Secure Performance-Accelerated Runtime Kernel for inference"
license = "Apache-2.0"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "veritas-spark-cli"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros", "signal", "net", "io-util"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization for IPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for distributed node identification
uuid = { version = "1.6", features = ["v4", "serde"] }

# Cross-platform IPC
interprocess = { version = "2.0", features = ["tokio"] }

# ONNX inference backend (Candle - pure Rust)
candle-core = { version = "0.8", optional = true }
candle-onnx = { version = "0.8", optional = true }

# GGUF inference backend (llama-cpp-rs)
llama-cpp-2 = { version = "0.1.133", optional = true }
encoding_rs = { version = "0.8", optional = true }

# CUDA support - safe CUDA bindings
cudarc = { version = "0.12", optional = true }

# Metal support for macOS (metal-rs is the primary Rust Metal crate)
metal = { version = "0.28", optional = true }

# Half-precision floating point for GPU operations
half = { version = "2.4", features = ["num-traits"] }

# Error handling
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Cryptographic hashing for session tokens and model verification
sha2 = "0.10"
hex = "0.4"

# Cryptographically secure random number generation
rand = "0.8"

# Output filtering
regex = "1.10"
unicode-normalization = "0.1"

# Config file parsing
toml = "0.8"

# Memory-mapped file access for zero-copy model loading
memmap2 = "0.9"

# Structured logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics facade
metrics = "0.22"

# High-performance synchronization primitives
parking_lot = "0.12"
dashmap = "6.0"

# CPU count detection for thread pool
num_cpus = "1.16"

# Pattern matching for prompt injection detection
aho-corasick = "1.1"

# AES encryption for model files
aes = "0.8"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }

# Hostname detection for machine ID
hostname = "0.4"

# Temp files for tests
tempfile = "3.10"

# Date/time for audit logging
chrono = { version = "0.4", features = ["serde"] }

# Python bindings (optional)
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"], optional = true }
pyo3-asyncio-0-21 = { version = "0.21", features = ["tokio-runtime"], optional = true }

# Windows API for Job Objects sandboxing (Windows only)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
] }

[features]
default = []
onnx = ["candle-core", "candle-onnx"]
gguf = ["llama-cpp-2", "encoding_rs"]
llama-cpp-backend = ["gguf"]  # Alias for GGUF backend via llama-cpp-2
cuda = ["cudarc"]  # GPU support via CUDA (requires CUDA toolkit)
metal = ["dep:metal"]  # GPU support via Metal (macOS only)
full = ["onnx", "gguf"]
gpu = ["cuda"]  # GPU support alias
ffi = ["cbindgen"]  # C FFI support (generates veritas_spark.h)
python = ["pyo3", "pyo3-asyncio-0-21"]  # Python bindings via PyO3

[build-dependencies]
cbindgen = { version = "0.26", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ipc_throughput"
harness = false

[[bench]]
name = "scheduler_throughput"
harness = false

[[bench]]
name = "inference_latency"
harness = false

[[bench]]
name = "generation_throughput"
harness = false

[[bench]]
name = "memory_overhead"
harness = false

[[bench]]
name = "concurrent_load"
harness = false

[[bench]]
name = "llama_cpp_comparison"
harness = false

[profile.release]
opt-level = 3
lto = true

# FORBIDDEN DEPENDENCIES - DO NOT ADD:
# reqwest - network access
# hyper - HTTP server
# tungstenite/tokio-tungstenite - WebSocket
# walkdir/glob - filesystem traversal
